@@ -51,6 +51,8 @@ final class Arguments extends IdScriptableObject
 {
     static final long serialVersionUID = 4275508002492040609L;
 
+    private static final String FTAG = "Arguments";
+
     public Arguments(NativeCall activation)
     {
         this.activation = activation;
@@ -60,10 +62,13 @@ final class Arguments extends IdScriptableObject
         setPrototype(ScriptableObject.getObjectPrototype(parent));
 
         args = activation.originalArgs;
-        lengthObj = new Integer(args.length);
+        lengthObj = Integer.valueOf(args.length);
 
         NativeFunction f = activation.function;
         calleeObj = f;
+
+        Scriptable topLevel = getTopLevelScope(parent);
+        constructor = getProperty(topLevel, "Object");
 
         int version = f.getLanguageVersion();
         if (version <= Context.VERSION_1_3
@@ -78,16 +83,56 @@ final class Arguments extends IdScriptableObject
     @Override
     public String getClassName()
     {
-        return "Object";
+        return FTAG;
     }
+
+    private Object arg(int index) {
+      if (index < 0 || args.length <= index) return NOT_FOUND;
+      return args[index];
+    }
+
+    // the following helper methods assume that 0 < index < args.length
+
+    private void putIntoActivation(int index, Object value) {
+        String argName = activation.function.getParamOrVarName(index);
+        activation.put(argName, activation, value);
+    }
+
+    private Object getFromActivation(int index) {
+        String argName = activation.function.getParamOrVarName(index);
+        return activation.get(argName, activation);
+    }
+
+    private void replaceArg(int index, Object value) {
+      if (sharedWithActivation(index)) {
+        putIntoActivation(index, value);
+      }
+      synchronized (this) {
+        if (args == activation.originalArgs) {
+          args = args.clone();
+        }
+        args[index] = value;
+      }
+    }
+
+    private void removeArg(int index) {
+      synchronized (this) {
+        if (args[index] != NOT_FOUND) {
+          if (args == activation.originalArgs) {
+            args = args.clone();
+          }
+          args[index] = NOT_FOUND;
+        }
+      }
+    }
+
+    // end helpers
 
     @Override
     public boolean has(int index, Scriptable start)
     {
-        if (0 <= index && index < args.length) {
-            if (args[index] != NOT_FOUND) {
-                return true;
-            }
+        if (arg(index) != NOT_FOUND) {
+          return true;
         }
         return super.has(index, start);
     }
@@ -95,19 +140,16 @@ final class Arguments extends IdScriptableObject
     @Override
     public Object get(int index, Scriptable start)
     {
-        if (0 <= index && index < args.length) {
-            Object value = args[index];
-            if (value != NOT_FOUND) {
-                if (sharedWithActivation(index)) {
-                    NativeFunction f = activation.function;
-                    String argName = f.getParamOrVarName(index);
-                    value = activation.get(argName, activation);
-                    if (value == NOT_FOUND) Kit.codeBug();
-                }
-                return value;
-            }
-        }
+      final Object value = arg(index);
+      if (value == NOT_FOUND) {
         return super.get(index, start);
+      } else {
+        if (sharedWithActivation(index)) {
+          return getFromActivation(index);
+        } else {
+          return value;
+        }
+      }
     }
 
     private boolean sharedWithActivation(int index)
@@ -133,41 +175,18 @@ final class Arguments extends IdScriptableObject
     @Override
     public void put(int index, Scriptable start, Object value)
     {
-        if (0 <= index && index < args.length) {
-            if (args[index] != NOT_FOUND) {
-                if (sharedWithActivation(index)) {
-                    String argName;
-                    argName = activation.function.getParamOrVarName(index);
-                    activation.put(argName, activation, value);
-                    return;
-                }
-                synchronized (this) {
-                    if (args[index] != NOT_FOUND) {
-                        if (args == activation.originalArgs) {
-                            args = args.clone();
-                        }
-                        args[index] = value;
-                        return;
-                    }
-                }
-            }
+        if (arg(index) == NOT_FOUND) {
+          super.put(index, start, value);
+        } else {
+          replaceArg(index, value);
         }
-        super.put(index, start, value);
     }
 
     @Override
     public void delete(int index)
     {
         if (0 <= index && index < args.length) {
-            synchronized (this) {
-                if (args[index] != NOT_FOUND) {
-                    if (args == activation.originalArgs) {
-                        args = args.clone();
-                    }
-                    args[index] = NOT_FOUND;
-                    return;
-                }
-            }
+          removeArg(index);
         }
         super.delete(index);
     }
@@ -178,8 +197,9 @@ final class Arguments extends IdScriptableObject
         Id_callee           = 1,
         Id_length           = 2,
         Id_caller           = 3,
+        Id_constructor      = 4,
 
-        MAX_INSTANCE_ID     = 3;
+        MAX_INSTANCE_ID     = Id_constructor;
 
     @Override
     protected int getMaxInstanceId()
@@ -191,14 +211,16 @@ final class Arguments extends IdScriptableObject
     protected int findInstanceIdInfo(String s)
     {
         int id;
-// #generated# Last update: 2007-05-09 08:15:04 EDT
+// #generated# Last update: 2010-01-06 05:48:21 ARST
         L0: { id = 0; String X = null; int c;
-            if (s.length()==6) {
+            int s_length = s.length();
+            if (s_length==6) {
                 c=s.charAt(5);
                 if (c=='e') { X="callee";id=Id_callee; }
                 else if (c=='h') { X="length";id=Id_length; }
                 else if (c=='r') { X="caller";id=Id_caller; }
             }
+            else if (s_length==11) { X="constructor";id=Id_constructor; }
             if (X!=null && X!=s && !X.equals(s)) id = 0;
             break L0;
         }
@@ -211,6 +233,7 @@ final class Arguments extends IdScriptableObject
           case Id_callee:
           case Id_caller:
           case Id_length:
+          case Id_constructor:
             attr = DONTENUM;
             break;
           default: throw new IllegalStateException();
@@ -227,6 +250,7 @@ final class Arguments extends IdScriptableObject
             case Id_callee: return "callee";
             case Id_length: return "length";
             case Id_caller: return "caller";
+            case Id_constructor: return "constructor";
         }
         return null;
     }
@@ -248,6 +272,8 @@ final class Arguments extends IdScriptableObject
                 }
                 return value;
             }
+            case Id_constructor:
+                return constructor;
         }
         return super.getInstanceIdValue(id);
     }
@@ -261,6 +287,7 @@ final class Arguments extends IdScriptableObject
             case Id_caller:
                 callerObj = (value != null) ? value : UniqueTag.NULL_VALUE;
                 return;
+            case Id_constructor: constructor = value; return;
         }
         super.setInstanceIdValue(id, value);
     }
@@ -269,23 +296,28 @@ final class Arguments extends IdScriptableObject
     Object[] getIds(boolean getAll)
     {
         Object[] ids = super.getIds(getAll);
-        if (getAll && args.length != 0) {
-            boolean[] present = null;
+        if (args.length != 0) {
+            boolean[] present = new boolean[args.length];
             int extraCount = args.length;
             for (int i = 0; i != ids.length; ++i) {
                 Object id = ids[i];
                 if (id instanceof Integer) {
                     int index = ((Integer)id).intValue();
                     if (0 <= index && index < args.length) {
-                        if (present == null) {
-                            present = new boolean[args.length];
-                        }
                         if (!present[index]) {
                             present[index] = true;
                             extraCount--;
                         }
                     }
                 }
+            }
+            if (!getAll) { // avoid adding args which were redefined to non-enumerable
+              for (int i = 0; i < present.length; i++) {
+                if (!present[i] && super.has(i, this)) {
+                  present[i] = true;
+                  extraCount--;
+                }
+              }
             }
             if (extraCount != 0) {
                 Object[] tmp = new Object[extraCount + ids.length];
@@ -294,7 +326,7 @@ final class Arguments extends IdScriptableObject
                 int offset = 0;
                 for (int i = 0; i != args.length; ++i) {
                     if (present == null || !present[i]) {
-                        ids[offset] = new Integer(i);
+                        ids[offset] = Integer.valueOf(i);
                         ++offset;
                     }
                 }
@@ -302,6 +334,59 @@ final class Arguments extends IdScriptableObject
             }
         }
         return ids;
+    }
+
+    @Override
+    protected ScriptableObject getOwnPropertyDescriptor(Context cx, Object id) {
+      double d = ScriptRuntime.toNumber(id);
+      int index = (int) d;
+      if (d != index) {
+        return super.getOwnPropertyDescriptor(cx, id);
+      }
+      Object value = arg(index);
+      if (value == NOT_FOUND) {
+        return super.getOwnPropertyDescriptor(cx, id);
+      }
+      if (sharedWithActivation(index)) {
+        value = getFromActivation(index);
+      }
+      if (super.has(index, this)) { // the descriptor has been redefined
+        ScriptableObject desc = super.getOwnPropertyDescriptor(cx, id);
+        desc.put("value", desc, value);
+        return desc;
+      } else {
+        Scriptable scope = getParentScope();
+        if (scope == null) scope = this;
+        return buildDataDescriptor(scope, value, EMPTY);
+      }
+    }
+
+    @Override
+    protected void defineOwnProperty(Context cx, Object id,
+                                     ScriptableObject desc,
+                                     boolean checkValid) {
+      super.defineOwnProperty(cx, id, desc, checkValid);
+
+      double d = ScriptRuntime.toNumber(id);
+      int index = (int) d;
+      if (d != index) return;
+
+      Object value = arg(index);
+      if (value == NOT_FOUND) return;
+
+      if (isAccessorDescriptor(desc)) {
+        removeArg(index);
+        return;
+      }
+
+      Object newValue = getProperty(desc, "value");
+      if (newValue == NOT_FOUND) return;
+
+      replaceArg(index, newValue);
+
+      if (isFalse(getProperty(desc, "writable"))) {
+        removeArg(index);
+      }
     }
 
 // Fields to hold caller, callee and length properties,
@@ -312,6 +397,7 @@ final class Arguments extends IdScriptableObject
     private Object callerObj;
     private Object calleeObj;
     private Object lengthObj;
+    private Object constructor;
 
     private NativeCall activation;
 
