@@ -55,6 +55,8 @@ import java.text.MessageFormat;
 import java.util.Locale;
 import java.util.ResourceBundle;
 
+import org.mozilla.javascript.ast.FunctionNode;
+import org.mozilla.javascript.v8dtoa.FastDtoa;
 import org.mozilla.javascript.xml.XMLObject;
 import org.mozilla.javascript.xml.XMLLib;
 
@@ -71,6 +73,32 @@ public class ScriptRuntime {
      */
     protected ScriptRuntime() {
     }
+
+
+    /**
+     * Returns representation of the [[ThrowTypeError]] object.
+     * See ECMA 5 spec, 13.2.3
+     */
+    public static BaseFunction typeErrorThrower() {
+      if (THROW_TYPE_ERROR == null) {
+        BaseFunction thrower = new BaseFunction() {
+          static final long serialVersionUID = -5891740962154902286L;
+
+          @Override
+          public Object call(Context cx, Scriptable scope, Scriptable thisObj, Object[] args) {
+            throw typeError0("msg.op.not.allowed");
+          }
+          @Override
+          public int getLength() {
+            return 0;
+          }
+        };
+        thrower.preventExtensions();
+        THROW_TYPE_ERROR = thrower;
+      }
+      return THROW_TYPE_ERROR;
+    }
+    private static BaseFunction THROW_TYPE_ERROR = null;
 
     static class NoSuchMethodShim implements Callable {
         String methodName;
@@ -138,27 +166,8 @@ public class ScriptRuntime {
     public static final Class<Scriptable> ScriptableClass =
         Scriptable.class;
 
-
-    private static final String[] lazilyNames = {
-        "RegExp",        "org.mozilla.javascript.regexp.NativeRegExp",
-        "Packages",      "org.mozilla.javascript.NativeJavaTopPackage",
-        "java",          "org.mozilla.javascript.NativeJavaTopPackage",
-        "javax",         "org.mozilla.javascript.NativeJavaTopPackage",
-        "org",           "org.mozilla.javascript.NativeJavaTopPackage",
-        "com",           "org.mozilla.javascript.NativeJavaTopPackage",
-        "edu",           "org.mozilla.javascript.NativeJavaTopPackage",
-        "net",           "org.mozilla.javascript.NativeJavaTopPackage",
-        "getClass",      "org.mozilla.javascript.NativeJavaTopPackage",
-        "JavaAdapter",   "org.mozilla.javascript.JavaAdapter",
-        "JavaImporter",  "org.mozilla.javascript.ImporterTopLevel",
-        "Continuation",  "org.mozilla.javascript.NativeContinuation",
-        //	TODO	Grotesque hack using literal string (xml) just to minimize
-		//			changes for now
-        "XML",           "(xml)",
-        "XMLList",       "(xml)",
-        "Namespace",     "(xml)",
-        "QName",         "(xml)",
-    };
+    // Locale object used to request locale-neutral operations.
+    public static Locale ROOT_LOCALE = new Locale("");
 
     private static final Object LIBRARY_SCOPE_KEY = "LIBRARY_SCOPE";
 
@@ -189,7 +198,7 @@ public class ScriptRuntime {
         Scriptable objectProto = ScriptableObject.getObjectPrototype(scope);
 
         // Function.prototype.__proto__ should be Object.prototype
-        Scriptable functionProto = ScriptableObject.getFunctionPrototype(scope);
+        Scriptable functionProto = ScriptableObject.getClassPrototype(scope, "Function");
         functionProto.setPrototype(objectProto);
 
         // Set the prototype of the object passed in if need be
@@ -203,38 +212,65 @@ public class ScriptRuntime {
         NativeArray.init(scope, sealed);
         if (cx.getOptimizationLevel() > 0) {
             // When optimizing, attempt to fulfill all requests for new Array(N)
-            // with a higher threshold before switching to a sparse 
+            // with a higher threshold before switching to a sparse
             // representation
-            NativeArray.setMaximumInitialCapacity(200000);            
+            NativeArray.setMaximumInitialCapacity(200000);
         }
         NativeString.init(scope, sealed);
         NativeBoolean.init(scope, sealed);
         NativeNumber.init(scope, sealed);
         NativeDate.init(scope, sealed);
         NativeMath.init(scope, sealed);
+        NativeJSON.init(scope, sealed);
 
         NativeWith.init(scope, sealed);
         NativeCall.init(scope, sealed);
         NativeScript.init(scope, sealed);
-        
+
         NativeIterator.init(scope, sealed); // Also initializes NativeGenerator
 
-        boolean withXml = cx.hasFeature(Context.FEATURE_E4X) && 
+        boolean withXml = cx.hasFeature(Context.FEATURE_E4X) &&
                           cx.getE4xImplementationFactory() != null;
 
-        for (int i = 0; i != lazilyNames.length; i += 2) {
-            String topProperty = lazilyNames[i];
-            String className = lazilyNames[i + 1];
-            if (!withXml && className.equals("(xml)")) {
-                continue;
-            } else if (withXml && className.equals("(xml)")) {
-				className = cx.getE4xImplementationFactory().
-                               getImplementationClassName();
-			}
-            new LazilyLoadedCtor(scope, topProperty, className, sealed);
+        // define lazy-loaded properties using their class name
+        new LazilyLoadedCtor(scope, "RegExp",
+                "org.mozilla.javascript.regexp.NativeRegExp", sealed, true);
+        new LazilyLoadedCtor(scope, "Packages",
+                "org.mozilla.javascript.NativeJavaTopPackage", sealed, true);
+        new LazilyLoadedCtor(scope, "getClass",
+                "org.mozilla.javascript.NativeJavaTopPackage", sealed, true);
+        new LazilyLoadedCtor(scope, "JavaAdapter",
+                "org.mozilla.javascript.JavaAdapter", sealed, true);
+        new LazilyLoadedCtor(scope, "JavaImporter",
+                "org.mozilla.javascript.ImporterTopLevel", sealed, true);
+        new LazilyLoadedCtor(scope, "Continuation",
+                "org.mozilla.javascript.NativeContinuation", sealed, true);
+
+        for (String packageName : getTopPackageNames()) {
+            new LazilyLoadedCtor(scope, packageName,
+                    "org.mozilla.javascript.NativeJavaTopPackage", sealed, true);
+        }
+
+        if (withXml) {
+            String xmlImpl = cx.getE4xImplementationFactory().getImplementationClassName();
+            new LazilyLoadedCtor(scope, "XML", xmlImpl, sealed, true);
+            new LazilyLoadedCtor(scope, "XMLList", xmlImpl, sealed, true);
+            new LazilyLoadedCtor(scope, "Namespace", xmlImpl, sealed, true);
+            new LazilyLoadedCtor(scope, "QName", xmlImpl, sealed, true);
+        }
+     
+        if (scope instanceof TopLevel) {
+            ((TopLevel)scope).cacheBuiltins();
         }
 
         return scope;
+    }
+    
+    static String[] getTopPackageNames() {
+        // Include "android" top package if running on Android
+        return "Dalvik".equals(System.getProperty("java.vm.name")) ?
+            new String[] { "java", "javax", "org", "com", "edu", "net", "android" } :
+            new String[] { "java", "javax", "org", "com", "edu", "net" };
     }
 
     public static ScriptableObject getLibraryScopeOrNull(Scriptable scope)
@@ -256,6 +292,44 @@ public class ScriptRuntime {
         return c == '\n' || c == '\r' || c == 0x2028 || c == 0x2029;
     }
 
+    public static boolean isJSWhitespaceOrLineTerminator(int c) {
+      return (isStrWhiteSpaceChar(c) || isJSLineTerminator(c));
+    }
+
+    /**
+     * Indicates if the character is a Str whitespace char according to ECMA spec:
+     * StrWhiteSpaceChar :::
+      <TAB>
+      <SP>
+      <NBSP>
+      <FF>
+      <VT>
+      <CR>
+      <LF>
+      <LS>
+      <PS>
+      <USP>
+      <BOM>
+     */
+    static boolean isStrWhiteSpaceChar(int c)
+    {
+    	switch (c) {
+    		case ' ': // <SP>
+    		case '\n': // <LF>
+    		case '\r': // <CR>
+    		case '\t': // <TAB>
+    		case '\u00A0': // <NBSP>
+    		case '\u000C': // <FF>
+    		case '\u000B': // <VT>
+    		case '\u2028': // <LS>
+    		case '\u2029': // <PS>
+        case '\uFEFF': // <BOM>
+    			return true;
+    		default:
+    			return Character.getType(c) == Character.SPACE_SEPARATOR;
+    	}
+    }
+
     public static Boolean wrapBoolean(boolean b)
     {
         return b ? Boolean.TRUE : Boolean.FALSE;
@@ -263,7 +337,7 @@ public class ScriptRuntime {
 
     public static Integer wrapInt(int i)
     {
-        return new Integer(i);
+        return Integer.valueOf(i);
     }
 
     public static Number wrapNumber(double x)
@@ -286,8 +360,8 @@ public class ScriptRuntime {
                 return ((Boolean) val).booleanValue();
             if (val == null || val == Undefined.instance)
                 return false;
-            if (val instanceof String)
-                return ((String) val).length() != 0;
+            if (val instanceof CharSequence)
+                return ((CharSequence) val).length() != 0;
             if (val instanceof Number) {
                 double d = ((Number) val).doubleValue();
                 return (d == d && d != 0.0);
@@ -329,6 +403,8 @@ public class ScriptRuntime {
                 return NaN;
             if (val instanceof String)
                 return toNumber((String) val);
+            if (val instanceof CharSequence)
+                return toNumber(val.toString());
             if (val instanceof Boolean)
                 return ((Boolean) val).booleanValue() ? 1 : +0.0;
             if (val instanceof Scriptable) {
@@ -400,7 +476,7 @@ public class ScriptRuntime {
                  * answer.
                  */
                 try {
-                    return Double.valueOf(s.substring(start, end)).doubleValue();
+                    return Double.parseDouble(s.substring(start, end));
                 } catch (NumberFormatException nfe) {
                     return NaN;
                 }
@@ -527,7 +603,7 @@ public class ScriptRuntime {
                 return +0.0;
             }
             startChar = s.charAt(start);
-            if (!Character.isWhitespace(startChar))
+            if (!ScriptRuntime.isStrWhiteSpaceChar(startChar))
                 break;
             start++;
         }
@@ -553,7 +629,7 @@ public class ScriptRuntime {
 
         int end = len - 1;
         char endChar;
-        while (Character.isWhitespace(endChar = s.charAt(end)))
+        while (ScriptRuntime.isStrWhiteSpaceChar(endChar = s.charAt(end)))
             end--;
         if (endChar == 'y') {
             // check for "Infinity"
@@ -568,21 +644,18 @@ public class ScriptRuntime {
         // A non-hexadecimal, non-infinity number:
         // just try a normal floating point conversion
         String sub = s.substring(start, end+1);
-        if (MSJVM_BUG_WORKAROUNDS) {
-            // The MS JVM will accept non-conformant strings
-            // rather than throwing a NumberFormatException
-            // as it should.
-            for (int i=sub.length()-1; i >= 0; i--) {
-                char c = sub.charAt(i);
-                if (('0' <= c && c <= '9') || c == '.' ||
+        // Quick test to check string contains only valid characters because
+        // Double.parseDouble() can be slow and accept input we want to reject
+        for (int i = sub.length() - 1; i >= 0; i--) {
+            char c = sub.charAt(i);
+            if (('0' <= c && c <= '9') || c == '.' ||
                     c == 'e' || c == 'E'  ||
                     c == '+' || c == '-')
-                    continue;
-                return NaN;
-            }
+                continue;
+            return NaN;
         }
         try {
-            return Double.valueOf(sub).doubleValue();
+            return Double.parseDouble(sub);
         } catch (NumberFormatException ex) {
             return NaN;
         }
@@ -610,9 +683,6 @@ public class ScriptRuntime {
 
         return result;
     }
-
-    /* Work around Microsoft Java VM bugs. */
-    private final static boolean MSJVM_BUG_WORKAROUNDS = true;
 
     public static String escapeString(String s)
     {
@@ -699,6 +769,13 @@ public class ScriptRuntime {
         return !TokenStream.isKeyword(s);
     }
 
+    public static CharSequence toCharSequence(Object val) {
+        if (val instanceof NativeString) {
+            return ((NativeString)val).toCharSequence();
+        }
+        return val instanceof CharSequence ? (CharSequence) val : toString(val);
+    }
+
     /**
      * Convert the value to a string.
      *
@@ -714,6 +791,9 @@ public class ScriptRuntime {
             }
             if (val instanceof String) {
                 return (String)val;
+            }
+            if (val instanceof CharSequence) {
+                return val.toString();
             }
             if (val instanceof Number) {
                 // XXX should we just teach NativeNumber.stringValue()
@@ -766,9 +846,15 @@ public class ScriptRuntime {
         if (base != 10) {
             return DToA.JS_dtobasestr(base, d);
         } else {
-            StringBuffer result = new StringBuffer();
-            DToA.JS_dtostr(result, DToA.DTOSTR_STANDARD, 0, d);
-            return result.toString();
+            // V8 FastDtoa can't convert all numbers, so try it first but
+            // fall back to old DToA in case it fails
+            String result = FastDtoa.numberToString(d);
+            if (result != null) {
+                return result;
+            }
+            StringBuilder buffer = new StringBuilder();
+            DToA.JS_dtostr(buffer, DToA.DTOSTR_STANDARD, 0, d);
+            return buffer.toString();
         }
 
     }
@@ -781,8 +867,8 @@ public class ScriptRuntime {
         if (value == Undefined.instance) {
             return "undefined";
         }
-        if (value instanceof String) {
-            String escaped = escapeString((String)value);
+        if (value instanceof CharSequence) {
+            String escaped = escapeString(value.toString());
             StringBuffer sb = new StringBuffer(escaped.length() + 2);
             sb.append('\"');
             sb.append(escaped);
@@ -942,20 +1028,27 @@ public class ScriptRuntime {
         if (val instanceof Scriptable) {
             return (Scriptable) val;
         }
+        if (val instanceof CharSequence) {
+            // FIXME we want to avoid toString() here, especially for concat()
+            NativeString result = new NativeString((CharSequence)val);
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.String);
+            return result;
+        }
+        if (val instanceof Number) {
+            NativeNumber result = new NativeNumber(((Number)val).doubleValue());
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.Number);
+            return result;
+        }
+        if (val instanceof Boolean) {
+            NativeBoolean result = new NativeBoolean(((Boolean)val).booleanValue());
+            setBuiltinProtoAndParent(result, scope, TopLevel.Builtins.Boolean);
+            return result;
+        }
         if (val == null) {
             throw typeError0("msg.null.to.object");
         }
         if (val == Undefined.instance) {
             throw typeError0("msg.undef.to.object");
-        }
-        String className = val instanceof String ? "String" :
-                           val instanceof Number ? "Number" :
-                           val instanceof Boolean ? "Boolean" :
-                           null;
-        if (className != null) {
-            Object[] args = { val };
-            scope = ScriptableObject.getTopLevelScope(scope);
-            return newObject(cx, scope, className, args);
         }
 
         // Extension: Wrap as a LiveConnect object.
@@ -996,6 +1089,16 @@ public class ScriptRuntime {
     {
         scope = ScriptableObject.getTopLevelScope(scope);
         Function ctor = getExistingCtor(cx, scope, constructorName);
+        if (args == null) { args = ScriptRuntime.emptyArgs; }
+        return ctor.construct(cx, scope, args);
+    }
+
+    public static Scriptable newBuiltinObject(Context cx, Scriptable scope,
+                                              TopLevel.Builtins type,
+                                              Object[] args)
+    {
+        scope = ScriptableObject.getTopLevelScope(scope);
+        Function ctor = TopLevel.getBuiltinCtor(cx, scope, type);
         if (args == null) { args = ScriptRuntime.emptyArgs; }
         return ctor.construct(cx, scope, args);
     }
@@ -1204,10 +1307,11 @@ public class ScriptRuntime {
     }
 
     /**
-     * Return -1L if str is not an index or the index value as lower 32
-     * bits of the result.
+     * Return -1L if str is not an index, or the index value as lower 32
+     * bits of the result. Note that the result needs to be cast to an int
+     * in order to produce the actual index, which may be negative.
      */
-    private static long indexFromString(String str)
+    public static long indexFromString(String str)
     {
         // The length of the decimal string representation of
         //  Integer.MAX_VALUE, 2147483647
@@ -1221,6 +1325,7 @@ public class ScriptRuntime {
             if (c == '-') {
                 if (len > 1) {
                     c = str.charAt(1);
+                    if (c == '0') return -1L; // "-0" is not an index
                     i = 1;
                     negate = true;
                 }
@@ -1303,7 +1408,7 @@ public class ScriptRuntime {
     {
         long indexTest = indexFromString(s);
         if (indexTest >= 0) {
-            return new Integer((int)indexTest);
+            return Integer.valueOf((int)indexTest);
         }
         return s;
     }
@@ -1316,7 +1421,7 @@ public class ScriptRuntime {
     {
         int i = (int)d;
         if (i == d) {
-            return new Integer(i);
+            return Integer.valueOf(i);
         }
         return toString(d);
     }
@@ -1375,19 +1480,19 @@ public class ScriptRuntime {
     public static Object getObjectElem(Scriptable obj, Object elem,
                                        Context cx)
     {
-        if (obj instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)obj;
-            return xmlObject.ecmaGet(cx, elem);
-        }
 
         Object result;
 
-        String s = toStringIdOrIndex(cx, elem);
-        if (s == null) {
-            int index = lastIndexResult(cx);
-            result = ScriptableObject.getProperty(obj, index);
+        if (obj instanceof XMLObject) {
+            result = ((XMLObject)obj).get(cx, elem);
         } else {
-            result = ScriptableObject.getProperty(obj, s);
+            String s = toStringIdOrIndex(cx, elem);
+            if (s == null) {
+                int index = lastIndexResult(cx);
+                result = ScriptableObject.getProperty(obj, index);
+            } else {
+                result = ScriptableObject.getProperty(obj, s);
+            }
         }
 
         if (result == Scriptable.NOT_FOUND) {
@@ -1422,17 +1527,10 @@ public class ScriptRuntime {
         }
         return getObjectProp(sobj, property, cx);
     }
-    
+
     public static Object getObjectProp(Scriptable obj, String property,
                                        Context cx)
     {
-        if (obj instanceof XMLObject) {
-            // TODO: Change XMLObject to just use Scriptable interface
-            // to avoid paying cost of instanceof check on *every property
-            // lookup* !
-            XMLObject xmlObject = (XMLObject)obj;
-            return xmlObject.ecmaGet(cx, property);
-        }
 
         Object result = ScriptableObject.getProperty(obj, property);
         if (result == Scriptable.NOT_FOUND) {
@@ -1445,7 +1543,7 @@ public class ScriptRuntime {
 
         return result;
     }
-    
+
     public static Object getObjectPropNoWarn(Object obj, String property,
                                              Context cx)
     {
@@ -1453,17 +1551,13 @@ public class ScriptRuntime {
         if (sobj == null) {
             throw undefReadError(obj, property);
         }
-        if (obj instanceof XMLObject) {
-            // TODO: fix as mentioned in note in method above
-            getObjectProp(sobj, property, cx);
-        }
         Object result = ScriptableObject.getProperty(sobj, property);
         if (result == Scriptable.NOT_FOUND) {
           return Undefined.instance;
         }
         return result;
     }
-    
+
     /*
      * A cheaper and less general version of the above for well-known argument
      * types.
@@ -1488,10 +1582,6 @@ public class ScriptRuntime {
     public static Object getObjectIndex(Scriptable obj, int index,
                                         Context cx)
     {
-        if (obj instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)obj;
-            return xmlObject.ecmaGet(cx, new Integer(index));
-        }
 
         Object result = ScriptableObject.getProperty(obj, index);
         if (result == Scriptable.NOT_FOUND) {
@@ -1518,17 +1608,15 @@ public class ScriptRuntime {
                                        Object value, Context cx)
     {
         if (obj instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)obj;
-            xmlObject.ecmaPut(cx, elem, value);
-            return value;
-        }
-
-        String s = toStringIdOrIndex(cx, elem);
-        if (s == null) {
-            int index = lastIndexResult(cx);
-            ScriptableObject.putProperty(obj, index, value);
+            ((XMLObject)obj).put(cx, elem, value);
         } else {
-            ScriptableObject.putProperty(obj, s, value);
+            String s = toStringIdOrIndex(cx, elem);
+            if (s == null) {
+                int index = lastIndexResult(cx);
+                ScriptableObject.putProperty(obj, index, value);
+            } else {
+                ScriptableObject.putProperty(obj, s, value);
+            }
         }
 
         return value;
@@ -1550,12 +1638,7 @@ public class ScriptRuntime {
     public static Object setObjectProp(Scriptable obj, String property,
                                        Object value, Context cx)
     {
-        if (obj instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)obj;
-            xmlObject.ecmaPut(cx, property, value);
-        } else {
-            ScriptableObject.putProperty(obj, property, value);
-        }
+        ScriptableObject.putProperty(obj, property, value);
         return value;
     }
 
@@ -1583,32 +1666,22 @@ public class ScriptRuntime {
     public static Object setObjectIndex(Scriptable obj, int index, Object value,
                                         Context cx)
     {
-        if (obj instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)obj;
-            xmlObject.ecmaPut(cx, new Integer(index), value);
-        } else {
-            ScriptableObject.putProperty(obj, index, value);
-        }
+        ScriptableObject.putProperty(obj, index, value);
         return value;
     }
 
     public static boolean deleteObjectElem(Scriptable target, Object elem,
                                            Context cx)
     {
-        boolean result;
-        if (target instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)target;
-            result = xmlObject.ecmaDelete(cx, elem);
+        String s = toStringIdOrIndex(cx, elem);
+        if (s == null) {
+            int index = lastIndexResult(cx);
+            target.delete(index);
+            return !target.has(index, target);
         } else {
-            String s = toStringIdOrIndex(cx, elem);
-            if (s == null) {
-                int index = lastIndexResult(cx);
-                result = ScriptableObject.deleteProperty(target, index);
-            } else {
-                result = ScriptableObject.deleteProperty(target, s);
-            }
+            target.delete(s);
+            return !target.has(s, target);
         }
-        return result;
     }
 
     public static boolean hasObjectElem(Scriptable target, Object elem,
@@ -1616,17 +1689,12 @@ public class ScriptRuntime {
     {
         boolean result;
 
-        if (target instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)target;
-            result = xmlObject.ecmaHas(cx, elem);
+        String s = toStringIdOrIndex(cx, elem);
+        if (s == null) {
+            int index = lastIndexResult(cx);
+            result = ScriptableObject.hasProperty(target, index);
         } else {
-            String s = toStringIdOrIndex(cx, elem);
-            if (s == null) {
-                int index = lastIndexResult(cx);
-                result = ScriptableObject.hasProperty(target, index);
-            } else {
-                result = ScriptableObject.hasProperty(target, s);
-            }
+            result = ScriptableObject.hasProperty(target, s);
         }
 
         return result;
@@ -1659,6 +1727,14 @@ public class ScriptRuntime {
     }
 
     /**
+     * @deprecated
+     */
+    public static Object delete(Object obj, Object id, Context cx)
+    {
+        return delete(obj, id, cx, false);
+    }
+
+    /**
      * The delete operator
      *
      * See ECMA 11.4.1
@@ -1669,10 +1745,13 @@ public class ScriptRuntime {
      * define a return value. Here we assume that the [[Delete]]
      * method doesn't return a value.
      */
-    public static Object delete(Object obj, Object id, Context cx)
+    public static Object delete(Object obj, Object id, Context cx, boolean isName)
     {
         Scriptable sobj = toObjectOrNull(cx, obj);
         if (sobj == null) {
+            if (isName) {
+                return Boolean.TRUE;
+            }
             String idStr = (id == null) ? "null" : id.toString();
             throw typeError2("msg.undef.prop.delete", toString(obj), idStr);
         }
@@ -1710,10 +1789,10 @@ public class ScriptRuntime {
                 Scriptable withObj = scope.getPrototype();
                 if (withObj instanceof XMLObject) {
                     XMLObject xmlObj = (XMLObject)withObj;
-                    if (xmlObj.ecmaHas(cx, name)) {
+                    if (xmlObj.has(name, xmlObj)) {
                         // function this should be the target object of with
                         thisObj = xmlObj;
-                        result = xmlObj.ecmaGet(cx, name);
+                        result = xmlObj.get(name, xmlObj);
                         break;
                     }
                     if (firstXMLObject == null) {
@@ -1761,7 +1840,7 @@ public class ScriptRuntime {
                     // object in the scope chain and we are looking for name,
                     // not function. The result should be an empty XMLList
                     // in name context.
-                    result = firstXMLObject.ecmaGet(cx, name);
+                    result = firstXMLObject.get(name, firstXMLObject);
                 }
                 // For top scope thisObj for functions is always scope itself.
                 thisObj = scope;
@@ -1812,7 +1891,7 @@ public class ScriptRuntime {
                 Scriptable withObj = scope.getPrototype();
                 if (withObj instanceof XMLObject) {
                     XMLObject xmlObject = (XMLObject)withObj;
-                    if (xmlObject.ecmaHas(cx, id)) {
+                    if (xmlObject.has(cx, id)) {
                         return xmlObject;
                     }
                     if (firstXMLObject == null) {
@@ -1856,12 +1935,9 @@ public class ScriptRuntime {
                                  Context cx, Scriptable scope, String id)
     {
         if (bound != null) {
-            if (bound instanceof XMLObject) {
-                XMLObject xmlObject = (XMLObject)bound;
-                xmlObject.ecmaPut(cx, id, value);
-            } else {
-                ScriptableObject.putProperty(bound, id, value);
-            }
+            // TODO: we used to special-case XMLObject here, but putProperty
+            // seems to work for E4X and it's better to optimize  the common case
+            ScriptableObject.putProperty(bound, id, value);
         } else {
             // "newname = 7;", where 'newname' has not yet
             // been defined, creates a new property in the
@@ -1882,12 +1958,31 @@ public class ScriptRuntime {
         return value;
     }
 
+    public static Object strictSetName(Scriptable bound, Object value,
+            Context cx, Scriptable scope, String id) {
+        if (bound != null) {
+            // TODO: The LeftHandSide also may not be a reference to a
+            // data property with the attribute value {[[Writable]]:false},
+            // to an accessor property with the attribute value
+            // {[[Put]]:undefined}, nor to a non-existent property of an
+            // object whose [[Extensible]] internal property has the value
+            // false. In these cases a TypeError exception is thrown (11.13.1).
+            // TODO: we used to special-case XMLObject here, but putProperty
+            // seems to work for E4X and we should optimize  the common case
+            ScriptableObject.putProperty(bound, id, value);
+            return value;
+        } else {
+            // See ES5 8.7.2
+            String msg = "Assignment to undefined \"" + id + "\" in strict mode";
+            throw constructError("ReferenceError", msg);
+        }
+    }
+
     public static Object setConst(Scriptable bound, Object value,
                                  Context cx, String id)
     {
         if (bound instanceof XMLObject) {
-            XMLObject xmlObject = (XMLObject)bound;
-            xmlObject.ecmaPut(cx, id, value);
+            bound.put(id, bound, value);
         } else {
             ScriptableObject.putConstProperty(bound, id, value);
         }
@@ -1917,22 +2012,22 @@ public class ScriptRuntime {
         int index;
         ObjToIntMap used;
         Object currentId;
-        int enumType; /* one of ENUM_INIT_KEYS, ENUM_INIT_VALUES, 
+        int enumType; /* one of ENUM_INIT_KEYS, ENUM_INIT_VALUES,
                          ENUM_INIT_ARRAY */
-        
+
         // if true, integer ids will be returned as numbers rather than strings
-        boolean enumNumbers; 
-        
+        boolean enumNumbers;
+
         Scriptable iterator;
     }
-    
-    public static Scriptable toIterator(Context cx, Scriptable scope, 
+
+    public static Scriptable toIterator(Context cx, Scriptable scope,
                                         Scriptable obj, boolean keyOnly)
     {
-        if (ScriptableObject.hasProperty(obj, 
+        if (ScriptableObject.hasProperty(obj,
             NativeIterator.ITERATOR_PROPERTY_NAME))
         {
-            Object v = ScriptableObject.getProperty(obj, 
+            Object v = ScriptableObject.getProperty(obj,
                 NativeIterator.ITERATOR_PROPERTY_NAME);
             if (!(v instanceof Callable)) {
                throw typeError0("msg.invalid.iterator");
@@ -1978,17 +2073,18 @@ public class ScriptRuntime {
             enumType != ENUMERATE_VALUES_NO_ITERATOR &&
             enumType != ENUMERATE_ARRAY_NO_ITERATOR)
         {
-            x.iterator = toIterator(cx, x.obj.getParentScope(), x.obj, true);
+            x.iterator = toIterator(cx, x.obj.getParentScope(), x.obj,
+                                    enumType == ScriptRuntime.ENUMERATE_KEYS);
         }
         if (x.iterator == null) {
             // enumInit should read all initial ids before returning
             // or "for (a.i in a)" would wrongly enumerate i in a as well
             enumChangeObject(x);
         }
-        
+
         return x;
     }
-    
+
     public static void setEnumNumbers(Object enumObj, boolean enumNumbers) {
         ((IdEnumeration)enumObj).enumNumbers = enumNumbers;
     }
@@ -2003,7 +2099,7 @@ public class ScriptRuntime {
             Callable f = (Callable) v;
             Context cx = Context.getContext();
             try {
-                x.currentId = f.call(cx, x.iterator.getParentScope(), 
+                x.currentId = f.call(cx, x.iterator.getParentScope(),
                                      x.iterator, emptyArgs);
                 return Boolean.TRUE;
             } catch (JavaScriptException e) {
@@ -2035,7 +2131,7 @@ public class ScriptRuntime {
                 int intId = ((Number)id).intValue();
                 if (!x.obj.has(intId, x.obj))
                     continue;   // must have been deleted
-                x.currentId = x.enumNumbers ? (Object) (new Integer(intId))
+                x.currentId = x.enumNumbers ? (Object) (Integer.valueOf(intId))
                                             : String.valueOf(intId);
             }
             return Boolean.TRUE;
@@ -2058,7 +2154,7 @@ public class ScriptRuntime {
           case ENUMERATE_ARRAY:
           case ENUMERATE_ARRAY_NO_ITERATOR:
             Object[] elements = { x.currentId, enumValue(enumObj, cx) };
-            return cx.newArray(x.obj, elements);
+            return cx.newArray(ScriptableObject.getTopLevelScope(x.obj), elements);
           default:
             throw Kit.codeBug();
         }
@@ -2146,9 +2242,9 @@ public class ScriptRuntime {
                                                   Object elem,
                                                   Context cx)
     {
-        String s = toStringIdOrIndex(cx, elem);
-        if (s != null) {
-            return getPropFunctionAndThis(obj, s, cx);
+        String str = toStringIdOrIndex(cx, elem);
+        if (str != null) {
+            return getPropFunctionAndThis(obj, str, cx);
         }
         int index = lastIndexResult(cx);
 
@@ -2157,23 +2253,7 @@ public class ScriptRuntime {
             throw undefCallError(obj, String.valueOf(index));
         }
 
-        Object value;
-        for (;;) {
-            // Ignore XML lookup as required by ECMA 357, 11.2.2.1
-            value = ScriptableObject.getProperty(thisObj, index);
-            if (value != Scriptable.NOT_FOUND) {
-                break;
-            }
-            if (!(thisObj instanceof XMLObject)) {
-                break;
-            }
-            XMLObject xmlObject = (XMLObject)thisObj;
-            Scriptable extra = xmlObject.getExtraMethodSource(cx);
-            if (extra == null) {
-                break;
-            }
-            thisObj = extra;
-        }
+        Object value = ScriptableObject.getProperty(thisObj, index);
         if (!(value instanceof Callable)) {
             throw notFunctionError(value, elem);
         }
@@ -2213,7 +2293,7 @@ public class ScriptRuntime {
         Scriptable thisObj = toObjectOrNull(cx, obj, scope);
         return getPropFunctionAndThisHelper(obj, property, cx, thisObj);
     }
-    
+
     private static Callable getPropFunctionAndThisHelper(Object obj,
           String property, Context cx, Scriptable thisObj)
     {
@@ -2221,30 +2301,15 @@ public class ScriptRuntime {
             throw undefCallError(obj, property);
         }
 
-        Object value;
-        for (;;) {
-            // Ignore XML lookup as required by ECMA 357, 11.2.2.1
-            value = ScriptableObject.getProperty(thisObj, property);
-            if (value != Scriptable.NOT_FOUND) {
-                break;
-            }
-            if (!(thisObj instanceof XMLObject)) {
-                break;
-            }
-            XMLObject xmlObject = (XMLObject)thisObj;
-            Scriptable extra = xmlObject.getExtraMethodSource(cx);
-            if (extra == null) {
-                break;
-            }
-            thisObj = extra;
-        }
-
+        Object value = ScriptableObject.getProperty(thisObj, property);
         if (!(value instanceof Callable)) {
             Object noSuchMethod = ScriptableObject.getProperty(thisObj, "__noSuchMethod__");
             if (noSuchMethod instanceof Callable)
                 value = new NoSuchMethodShim((Callable)noSuchMethod, property);
-            else
-                throw notFunctionError(thisObj, value, property);
+        }
+
+        if (!(value instanceof Callable)) {
+            throw notFunctionError(thisObj, value, property);
         }
 
         storeScriptable(cx, thisObj);
@@ -2334,7 +2399,7 @@ public class ScriptRuntime {
                                      String filename, int lineNumber)
     {
         if (callType == Node.SPECIALCALL_EVAL) {
-            if (NativeGlobal.isEvalFunction(fun)) {
+            if (thisObj.getParentScope() == null && NativeGlobal.isEvalFunction(fun)) {
                 return evalSpecial(cx, scope, callerThis, args,
                                    filename, lineNumber);
             }
@@ -2393,7 +2458,7 @@ public class ScriptRuntime {
         Object[] callArgs;
         if (isApply) {
             // Follow Ecma 15.3.4.3
-            callArgs = L <= 1 ? ScriptRuntime.emptyArgs : 
+            callArgs = L <= 1 ? ScriptRuntime.emptyArgs :
                 getApplyArguments(cx, args[1]);
         } else {
             // Follow Ecma 15.3.4.4
@@ -2446,7 +2511,7 @@ public class ScriptRuntime {
         if (args.length < 1)
             return Undefined.instance;
         Object x = args[0];
-        if (!(x instanceof String)) {
+        if (!(x instanceof CharSequence)) {
             if (cx.hasFeature(Context.FEATURE_STRICT_MODE) ||
                 cx.hasFeature(Context.FEATURE_STRICT_EVAL))
             {
@@ -2474,12 +2539,12 @@ public class ScriptRuntime {
         Evaluator evaluator = Context.createInterpreter();
         if (evaluator == null) {
             throw new JavaScriptException("Interpreter not present",
-                    filename, lineNumber);            
+                    filename, lineNumber);
         }
 
         // Compile with explicit interpreter instance to force interpreter
         // mode.
-        Script script = cx.compileString((String)x, evaluator,
+        Script script = cx.compileString(x.toString(), evaluator,
                                          reporter, sourceName, 1, null);
         evaluator.setEvalScriptFlag(script);
         Callable c = (Callable)script;
@@ -2495,18 +2560,11 @@ public class ScriptRuntime {
             return "object";
         if (value == Undefined.instance)
             return "undefined";
+        if (value instanceof ScriptableObject)
+        	return ((ScriptableObject) value).getTypeOf();
         if (value instanceof Scriptable)
-        {
-            if (value instanceof ScriptableObject &&
-                ((ScriptableObject)value).avoidObjectDetection())
-            {
-                return "undefined";
-            }
-            if (value instanceof XMLObject)
-                return "xml";
             return (value instanceof Callable) ? "function" : "object";
-        }
-        if (value instanceof String)
+        if (value instanceof CharSequence)
             return "string";
         if (value instanceof Number)
             return "number";
@@ -2561,21 +2619,21 @@ public class ScriptRuntime {
             val1 = ((Scriptable) val1).getDefaultValue(null);
         if (val2 instanceof Scriptable)
             val2 = ((Scriptable) val2).getDefaultValue(null);
-        if (!(val1 instanceof String) && !(val2 instanceof String))
+        if (!(val1 instanceof CharSequence) && !(val2 instanceof CharSequence))
             if ((val1 instanceof Number) && (val2 instanceof Number))
                 return wrapNumber(((Number)val1).doubleValue() +
                                   ((Number)val2).doubleValue());
             else
                 return wrapNumber(toNumber(val1) + toNumber(val2));
-        return toString(val1).concat(toString(val2));
+        return new ConsString(toCharSequence(val1), toCharSequence(val2));
     }
 
-    public static String add(String val1, Object val2) {
-        return val1.concat(toString(val2));
+    public static CharSequence add(CharSequence val1, Object val2) {
+        return new ConsString(val1, toCharSequence(val2));
     }
 
-    public static String add(Object val1, String val2) {
-        return toString(val1).concat(val2);
+    public static CharSequence add(Object val1, CharSequence val2) {
+        return new ConsString(toCharSequence(val1), val2);
     }
 
     /**
@@ -2599,6 +2657,10 @@ public class ScriptRuntime {
                 }
                 target = scopeChain;
                 do {
+                    if (target instanceof NativeWith &&
+                            target.getPrototype() instanceof XMLObject) {
+                        break;
+                    }
                     value = target.get(id, scopeChain);
                     if (value != Scriptable.NOT_FOUND) {
                         break search;
@@ -2726,13 +2788,17 @@ public class ScriptRuntime {
         }
     }
 
-    private static Object toPrimitive(Object val)
+    public static Object toPrimitive(Object val) {
+        return toPrimitive(val, null);
+    }
+
+    public static Object toPrimitive(Object val, Class<?> typeHint)
     {
         if (!(val instanceof Scriptable)) {
             return val;
         }
         Scriptable s = (Scriptable)val;
-        Object result = s.getDefaultValue(null);
+        Object result = s.getDefaultValue(typeHint);
         if (result instanceof Scriptable)
             throw typeError0("msg.bad.default.value");
         return result;
@@ -2758,8 +2824,10 @@ public class ScriptRuntime {
             return false;
         } else if (x instanceof Number) {
             return eqNumber(((Number)x).doubleValue(), y);
-        } else if (x instanceof String) {
-            return eqString((String)x, y);
+        } else if (x == y) {
+            return true;
+        } else if (x instanceof CharSequence) {
+            return eqString((CharSequence)x, y);
         } else if (x instanceof Boolean) {
             boolean b = ((Boolean)x).booleanValue();
             if (y instanceof Boolean) {
@@ -2774,9 +2842,6 @@ public class ScriptRuntime {
             return eqNumber(b ? 1.0 : 0.0, y);
         } else if (x instanceof Scriptable) {
             if (y instanceof Scriptable) {
-                if (x == y) {
-                    return true;
-                }
                 if (x instanceof ScriptableObject) {
                     Object test = ((ScriptableObject)x).equivalentValues(y);
                     if (test != Scriptable.NOT_FOUND) {
@@ -2811,8 +2876,8 @@ public class ScriptRuntime {
                 return eqNumber(d, x);
             } else if (y instanceof Number) {
                 return eqNumber(((Number)y).doubleValue(), x);
-            } else if (y instanceof String) {
-                return eqString((String)y, x);
+            } else if (y instanceof CharSequence) {
+                return eqString((CharSequence)y, x);
             }
             // covers the case when y == Undefined.instance as well
             return false;
@@ -2821,10 +2886,11 @@ public class ScriptRuntime {
             return x == y;
         }
     }
-    
-    private static boolean isPrimitive(Object obj) {
-        return (obj instanceof Number) || (obj instanceof String) ||
-               (obj instanceof Boolean);
+
+    public static boolean isPrimitive(Object obj) {
+        return obj == null || obj == Undefined.instance ||
+                (obj instanceof Number) || (obj instanceof String) ||
+                (obj instanceof Boolean);
     }
 
     static boolean eqNumber(double x, Object y)
@@ -2834,7 +2900,7 @@ public class ScriptRuntime {
                 return false;
             } else if (y instanceof Number) {
                 return x == ((Number)y).doubleValue();
-            } else if (y instanceof String) {
+            } else if (y instanceof CharSequence) {
                 return x == toNumber(y);
             } else if (y instanceof Boolean) {
                 return x == (((Boolean)y).booleanValue() ? 1.0 : +0.0);
@@ -2854,20 +2920,21 @@ public class ScriptRuntime {
         }
     }
 
-    private static boolean eqString(String x, Object y)
+    private static boolean eqString(CharSequence x, Object y)
     {
         for (;;) {
             if (y == null || y == Undefined.instance) {
                 return false;
-            } else if (y instanceof String) {
-                return x.equals(y);
+            } else if (y instanceof CharSequence) {
+                CharSequence c = (CharSequence)y;
+                return x.length() == c.length() && x.toString().equals(c.toString());
             } else if (y instanceof Number) {
-                return toNumber(x) == ((Number)y).doubleValue();
+                return toNumber(x.toString()) == ((Number)y).doubleValue();
             } else if (y instanceof Boolean) {
-                return toNumber(x) == (((Boolean)y).booleanValue() ? 1.0 : 0.0);
+                return toNumber(x.toString()) == (((Boolean)y).booleanValue() ? 1.0 : 0.0);
             } else if (y instanceof Scriptable) {
                 if (y instanceof ScriptableObject) {
-                    Object test = ((ScriptableObject)y).equivalentValues(x);
+                    Object test = ((ScriptableObject)y).equivalentValues(x.toString());
                     if (test != Scriptable.NOT_FOUND) {
                         return ((Boolean)test).booleanValue();
                     }
@@ -2896,9 +2963,9 @@ public class ScriptRuntime {
             if (y instanceof Number) {
                 return ((Number)x).doubleValue() == ((Number)y).doubleValue();
             }
-        } else if (x instanceof String) {
-            if (y instanceof String) {
-                return x.equals(y);
+        } else if (x instanceof CharSequence) {
+            if (y instanceof CharSequence) {
+                return x.toString().equals(y.toString());
             }
         } else if (x instanceof Boolean) {
             if (y instanceof Boolean) {
@@ -2928,8 +2995,6 @@ public class ScriptRuntime {
         }
 
         // for primitive values on LHS, return false
-        // XXX we may want to change this so that
-        // 5 instanceof Number == true
         if (! (a instanceof Scriptable))
             return false;
 
@@ -2969,7 +3034,7 @@ public class ScriptRuntime {
     public static boolean in(Object a, Object b, Context cx)
     {
         if (!(b instanceof Scriptable)) {
-            throw typeError0("msg.instanceof.not.object");
+            throw typeError0("msg.in.not.object");
         }
 
         return hasObjectElem((Scriptable)b, a, cx);
@@ -2986,8 +3051,8 @@ public class ScriptRuntime {
                 val1 = ((Scriptable) val1).getDefaultValue(NumberClass);
             if (val2 instanceof Scriptable)
                 val2 = ((Scriptable) val2).getDefaultValue(NumberClass);
-            if (val1 instanceof String && val2 instanceof String) {
-                return ((String)val1).compareTo((String)val2) < 0;
+            if (val1 instanceof CharSequence && val2 instanceof CharSequence) {
+                return val1.toString().compareTo(val2.toString()) < 0;
             }
             d1 = toNumber(val1);
             d2 = toNumber(val2);
@@ -3006,8 +3071,8 @@ public class ScriptRuntime {
                 val1 = ((Scriptable) val1).getDefaultValue(NumberClass);
             if (val2 instanceof Scriptable)
                 val2 = ((Scriptable) val2).getDefaultValue(NumberClass);
-            if (val1 instanceof String && val2 instanceof String) {
-                return ((String)val1).compareTo((String)val2) <= 0;
+            if (val1 instanceof CharSequence && val2 instanceof CharSequence) {
+                return val1.toString().compareTo(val2.toString()) <= 0;
             }
             d1 = toNumber(val1);
             d2 = toNumber(val2);
@@ -3028,7 +3093,11 @@ public class ScriptRuntime {
                 Constructor<?> globalClassCtor = globalClass.getConstructor(parm);
                 Object[] arg = { cx };
                 return (ScriptableObject) globalClassCtor.newInstance(arg);
-            } catch (Exception e) {
+            }
+            catch (RuntimeException e) {
+                throw e;
+            }
+            catch (Exception e) {
                 // fall through...
             }
         }
@@ -3101,11 +3170,11 @@ public class ScriptRuntime {
             }
         }
     }
-    
+
     public static void addInstructionCount(Context cx, int instructionsToAdd)
     {
     	cx.instructionCount += instructionsToAdd;
-        if (cx.instructionCount > cx.instructionThreshold) 
+        if (cx.instructionCount > cx.instructionThreshold)
         {
             cx.observeInstructionCount(cx.instructionCount);
             cx.instructionCount = 0;
@@ -3256,13 +3325,17 @@ public class ScriptRuntime {
             int line = re.lineNumber();
             Object args[];
             if (line > 0) {
-                args = new Object[] { errorMsg, sourceUri, new Integer(line) };
+                args = new Object[] { errorMsg, sourceUri, Integer.valueOf(line) };
             } else {
                 args = new Object[] { errorMsg, sourceUri };
             }
 
             Scriptable errorObject = cx.newObject(scope, errorName, args);
             ScriptableObject.putProperty(errorObject, "name", errorName);
+            // set exception in Error objects to enable non-ECMA "stack" property
+            if (errorObject instanceof NativeError) {
+                ((NativeError) errorObject).setStackProvider(re);
+            }
 
             if (javaException != null && isVisible(cx, javaException)) {
                 Object wrap = cx.getWrapFactory().wrap(cx, scope, javaException,
@@ -3275,7 +3348,7 @@ public class ScriptRuntime {
                 Object wrap = cx.getWrapFactory().wrap(cx, scope, re, null);
                 ScriptableObject.defineProperty(
                         errorObject, "rhinoException", wrap,
-                        ScriptableObject.PERMANENT | ScriptableObject.READONLY);                
+                        ScriptableObject.PERMANENT | ScriptableObject.READONLY);
             }
             obj = errorObject;
         }
@@ -3284,7 +3357,7 @@ public class ScriptRuntime {
         // See ECMA 12.4
         catchScopeObject.defineProperty(
             exceptionName, obj, ScriptableObject.PERMANENT);
-        
+
         if (isVisible(cx, t)) {
             // Add special Rhino object __exception__ defined in the catch
             // scope that can be used to retrieve the Java exception associated
@@ -3299,7 +3372,7 @@ public class ScriptRuntime {
         }
         return catchScopeObject;
     }
-    
+
     private static boolean isVisible(Context cx, Object obj) {
         ClassShutter shutter = cx.getClassShutter();
         return shutter == null ||
@@ -3366,6 +3439,16 @@ public class ScriptRuntime {
         object.setPrototype(proto);
     }
 
+    public static void setBuiltinProtoAndParent(ScriptableObject object,
+                                                Scriptable scope,
+                                                TopLevel.Builtins type)
+    {
+        scope = ScriptableObject.getTopLevelScope(scope);
+        object.setParentScope(scope);
+        object.setPrototype(TopLevel.getBuiltinPrototype(scope, type));
+    }
+
+
     public static void initFunction(Context cx, Scriptable scope,
                                     NativeFunction function, int type,
                                     boolean fromEvalCode)
@@ -3427,21 +3510,21 @@ public class ScriptRuntime {
                     ++j;
                 }
             }
-            return cx.newObject(scope, "Array", sparse);
+            return cx.newArray(scope, sparse);
         }
-        
-        Scriptable arrayObj = cx.newObject(scope, "Array",
-                                           ScriptRuntime.emptyArgs);
+
+        Scriptable array = cx.newArray(scope, length);
+
         int skip = 0;
         for (int i = 0, j = 0; i != length; ++i) {
             if (skip != skipCount && skipIndices[skip] == i) {
                 ++skip;
                 continue;
             }
-            ScriptableObject.putProperty(arrayObj, i, objects[j]);
+            ScriptableObject.putProperty(array, i, objects[j]);
             ++j;
         }
-        return arrayObj;
+        return array;
     }
 
   /**
@@ -3454,11 +3537,9 @@ public class ScriptRuntime {
                                               Object[] propertyValues,
                                               Context cx, Scriptable scope)
     {
-        // This will initialize to all zeros, exactly what we need for old-style
-        // getterSetters values (no getters or setters in the list)
-        int [] getterSetters = new int[propertyIds.length];
-        return newObjectLiteral(propertyIds, propertyValues, getterSetters,
-                cx, scope);
+        // Passing null for getterSetters means no getters or setters
+        return newObjectLiteral(propertyIds, propertyValues, null, cx, scope);
+
     }
 
     public static Scriptable newObjectLiteral(Object[] propertyIds,
@@ -3469,29 +3550,24 @@ public class ScriptRuntime {
         Scriptable object = cx.newObject(scope);
         for (int i = 0, end = propertyIds.length; i != end; ++i) {
             Object id = propertyIds[i];
-            int getterSetter = getterSetters[i];
+            int getterSetter = getterSetters == null ? 0 : getterSetters[i];
             Object value = propertyValues[i];
             if (id instanceof String) {
-                if (getterSetter == 0)
-                    ScriptableObject.putProperty(object, (String)id, value);
-                else {
-                    Callable fun;
-                    String definer;
-                    if (getterSetter < 0)   // < 0 means get foo() ...
-                        definer = "__defineGetter__";
-                    else
-                        definer = "__defineSetter__";
-                    fun = getPropFunctionAndThis(object, definer, cx);
-                    // Must consume the last scriptable object in cx
-                    lastStoredScriptable(cx);
-                    Object[] outArgs = new Object[2];
-                    outArgs[0] = id;
-                    outArgs[1] = value;
-                    fun.call(cx, scope, object, outArgs);
-                }              
+                if (getterSetter == 0) {
+                    if (isSpecialProperty((String)id)) {
+                        specialRef(object, (String)id, cx).set(cx, value);
+                    } else {
+                        object.put((String)id, object, value);
+                    }
+                } else {
+                    ScriptableObject so = (ScriptableObject)object;
+                    Callable getterOrSetter = (Callable)value;
+                    boolean isSetter = getterSetter == 1;
+                    so.setGetterOrSetter((String)id, 0, getterOrSetter, isSetter);
+                }
             } else {
                 int index = ((Integer)id).intValue();
-                ScriptableObject.putProperty(object, index, value);
+                object.put(index, object, value);
             }
         }
         return object;
@@ -3566,15 +3642,15 @@ public class ScriptRuntime {
         Object[] arguments = {arg1, arg2, arg3, arg4};
         return getMessage(messageId, arguments);
     }
-    
+
     /**
      * This is an interface defining a message provider. Create your
      * own implementation to override the default error message provider.
-     * 
+     *
      * @author Mike Harm
      */
     public interface MessageProvider {
-     
+
         /**
          * Returns a textual message identified by the given messageId,
          * parameterized by the given arguments.
@@ -3631,7 +3707,7 @@ public class ScriptRuntime {
         String filename = Context.getSourcePositionFromStack(linep);
         return constructError(error, message, filename, linep[0], null, 0);
     }
-    
+
     public static EcmaError constructError(String error,
                                            String message,
                                            int lineNumberDelta)
@@ -3739,6 +3815,13 @@ public class ScriptRuntime {
     {
         // Use obj and value for better error reporting
         String objString = toString(obj);
+        if (obj instanceof NativeFunction) {
+            // Omit function body in string representations of functions
+            int curly = objString.indexOf('{');
+            if (curly > -1) {
+                objString = objString.substring(0, curly + 1) + "...}";
+            }
+        }
         if (value == Scriptable.NOT_FOUND) {
             return typeError2("msg.function.not.found.in", propertyName,
                     objString);
@@ -3919,7 +4002,23 @@ public class ScriptRuntime {
         return Context.reportRuntimeError1(msg, val.getClass().getName());
     }
 
+    /**
+     * Equivalent to executing "new Error(message)" from JavaScript.
+     * @param cx the current context
+     * @param scope the current scope
+     * @param message the message
+     * @return a JavaScriptException you should throw
+     */
+    public static JavaScriptException throwError(Context cx, Scriptable scope,
+            String message) {
+      int[] linep = { 0 };
+      String filename = Context.getSourcePositionFromStack(linep);
+        final Scriptable error = newBuiltinObject(cx, scope,
+                TopLevel.Builtins.Error, new Object[] { message, filename, Integer.valueOf(linep[0]) });
+        return new JavaScriptException(error, filename, linep[0]);
+    }
+
     public static final Object[] emptyArgs = new Object[0];
     public static final String[] emptyStrings = new String[0];
-    
+
 }
